  - network map: devices connection lines are not overlaps (alec)
  - network map: fixed thick line look, better map generation speed (alec)
  - network map: view without nodes (alec)
  - network devices: fixed devices list sorting by used ports count (alec)
  - network devices: added search engine (alec)
  - let liabilities values be less than zero (chilek)
  - lmsd/ggnotify: fixed query (alec)

version 1.9.7 Thalan (2007-05-09):

  - cash receipts: added target 'advance' (alec)
  - cash receipts: changed registry privilages system (alec)
  - cash receipts: added 'Save' link - saving receipts without printing (alec)
  - choosecustomer: removed not needed WHERE conditions in customer 
    select window, rewrited query for MySQL 5.0, now is 20-100 times faster (alec)
  - we can move customers from one tariff to another filtering it by network (chilek)
  - optimized Customers List generation time when using filters (alec)
  - optimized Devices List generation time (alec)
  - helpdesk: changed queues privilages system (alec)
  - helpdesk: some one-time functions from LMS class moved to modules (alec)
  - helpdesk: added notes to tickets (alec)
  - helpdesk: new note/message e-mail notification on demand (alec)
  - helpdesk: simplified tickets resolving - now is possible to resolve tickets
    with cause setting while new message/note addition (alec)
  - helpdesk: added customer info in ticket view (alec)
  - helpdesk: added option 'helpdesk_customerinfo' (alec)
  - helpdesk: sending notifications when ticket's queue has changed and option
    'newticket_notify' is set (alec) 
  - lms-payments, lmsd/payments: fixed problem with discounts invoicing (alec)
  - traffic filter: we can filtering stats by customer (chilek)
  - added index customerid on table documents (alec)
  - fixed encoding of subjects in mail sent from LMS-UI (alec)
  - fixed 'big_networks' option testing (alec)
  - now we can set message for customers listed in Customer Search Results
    list (alec)